release-data/changelogs/8.2/plugins/auth-backends.adoc
= Changelogs for Rudder plugin auth-backends 8.2.\* versions

== auth-backends-8.2.9-2.7 (2025-09-15)

=== Changes


=== Bug fixes

==== Documentation

* Fixed: How to configure a proxy for SSO feature
    (https://issues.rudder.io/issues/27320[#27320])

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.2.7-2.7 (2025-06-05)

=== Changes


=== Bug fixes

==== Documentation

* Fixed: Clarify how to setup multiple OIDC providers
    (https://issues.rudder.io/issues/26933[#26933])

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.2.5-2.7 (2025-02-27)

=== Changes


=== Bug fixes

==== UI - UX

* Fixed: Some plugins don't use the correct notification system
    (https://issues.rudder.io/issues/26279[#26279])

==== Miscellaneous

* Fixed: When we use LDAP authentication backend, the error is confusing if the user doesn't exist in Rudder
    (https://issues.rudder.io/issues/26063[#26063])

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.2.4-2.7 (2025-01-13)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.2.3-2.7 (2024-12-03)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.2.2-2.7 (2024-11-29)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: cannot use roles from SSO containing = or ,
    (https://issues.rudder.io/issues/25827[#25827])

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.2.1-2.7 (2024-11-28)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.2.0-2.7 (2024-10-29)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.2.0.rc1-2.7 (2024-10-18)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.2.0.beta1-2.7 (2024-09-09)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Clarify that we do not support authorizations in OIDC authentication role in documentation
    (https://issues.rudder.io/issues/25280[#25280])
* Fixed: Typo for parameter enableProvisioning in documentation
    (https://issues.rudder.io/issues/25221[#25221])

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.2.0.alpha1-2.7 (2024-09-09)

=== Changes


==== Refactoring

* Update scala plugin dependencies
    (https://issues.rudder.io/issues/24771[#24771])

=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

