release-data/changelogs/8.3/plugins/auth-backends.adoc
= Changelogs for Rudder plugin auth-backends 8.3.\* versions

== auth-backends-8.3.11-2.7 (2026-05-04)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.3.10-2.7 (2026-04-01)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.3.9-2.7 (2026-02-16)

=== Changes


==== Documentation

* Add debugging entry for clock mismatch between Rudder server and auth server
    (https://issues.rudder.io/issues/28322[#28322])

=== Bug fixes

==== Miscellaneous

* Fixed: There is no debug logs for JWT/opaque OIDC tokens attributes
    (https://issues.rudder.io/issues/28132[#28132])
* Fixed: Documentation for opaque OIDC tokens is wrong for client_id
    (https://issues.rudder.io/issues/28129[#28129])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.3.8-2.7 (2025-12-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.3.7-2.7 (2025-12-10)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.3.6-2.7 (2025-11-19)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.3.5-2.7 (2025-10-02)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.3.4-2.7 (2025-09-15)

=== Changes


=== Bug fixes

==== Documentation

* Fixed: How to configure a proxy for SSO feature
    (https://issues.rudder.io/issues/27320[#27320])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.3.3-2.7 (2025-07-17)

=== Changes


==== Documentation

* OAuth2 documentation is missing tenants for users
    (https://issues.rudder.io/issues/27101[#27101])

==== Miscellaneous

* Add a cache for OIDC validation request
    (https://issues.rudder.io/issues/27115[#27115])

=== Bug fixes

==== Documentation

* Fixed: OIDC documentation has references to user-management plugin 
    (https://issues.rudder.io/issues/26871[#26871])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.3.2-2.7 (2025-06-05)

=== Changes


==== Miscellaneous

* Documentation for OIDC opaque/JWT bearer tokens 
    (https://issues.rudder.io/issues/26713[#26713])

=== Bug fixes

==== Documentation

* Fixed: Clarify how to setup multiple OIDC providers
    (https://issues.rudder.io/issues/26933[#26933])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.3.1-2.7 (2025-05-07)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.3.0-2.7 (2025-04-23)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.3.0.rc1-2.7 (2025-04-10)

=== Changes


=== Bug fixes

==== Documentation

* Fixed: Remove Radius from auth-backends plugin documentation
    (https://issues.rudder.io/issues/26470[#26470])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.3.0.beta1-2.7 (2025-03-07)

=== Changes


==== Architecture - evolution

* Impact of 24872 (API rights) on public plugins
    (https://issues.rudder.io/issues/26397[#26397])

==== Miscellaneous

* Add OAuth2 JWT Bearer token with client_credentials flow for Rudder API authentication
    (https://issues.rudder.io/issues/26168[#26168])

=== Bug fixes

==== Miscellaneous

* Fixed:  Add OAuth2 Opaque Access Bearer token with client_credentials flow for Rudder API authentication
    (https://issues.rudder.io/issues/26291[#26291])

==== UI - UX

* Fixed: Some plugins don't use the correct notification system
    (https://issues.rudder.io/issues/26279[#26279])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-8.3.0.alpha1-2.7 (2025-01-23)

=== Changes


==== UI - UX

* Change main menu (public plugins)
    (https://issues.rudder.io/issues/26095[#26095])

=== Bug fixes

==== Miscellaneous

* Fixed: When we use LDAP authentication backend, the error is confusing if the user doesn't exist in Rudder
    (https://issues.rudder.io/issues/26063[#26063])
* Fixed: Update scala plugin dependencies
    (https://issues.rudder.io/issues/25769[#25769])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

